fix [#34378] GLSL materials using multiple UV layers fail in editmode regression since BMesh merge.